@@ -1257,3 +1257,6 @@ Version 12
 		attributes of the remaining series.	
 	HistogramSeriesAttributes: fixed a bug with the series name being null
 		in the remove series confirmation dialog
+	HistogramGenerator: added function addSeriesToDataSet to isolate
+		dataset.addSeries behavior, so it can be changed later (instead of 
+		overriding the entire update() function.
